Correction du QCM sur les sequences

--- a/python/session-2016-03-idf/1_fonctions/quizz/3-sequences.html
+++ b/python/session-2016-03-idf/1_fonctions/quizz/3-sequences.html
@@ -93,7 +93,7 @@ LABEL.none {
 		<div class="reponses" >
 			On se donne la variable suivante :
 			<br>
-			<b>chaine = "douarnenez"</>
+			<b>chaine = "douarnenez"</b>
 		</div>
 
 		<!-- Question 1 -->
